google analytics edit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Mike Hoff</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TY8Z61P3GL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TY8Z61P3GL');
+</script>
 </head>
 <body>
     <header class="header">
